[gd_scene load_steps=27 format=3 uid="uid://bdah1j0tp47ai"]

[ext_resource type="Script" path="res://scenes/player/player.gd" id="1_1r1j1"]
[ext_resource type="Texture2D" uid="uid://b3dcb00i32yma" path="res://assets/character_down.aseprite" id="1_ylyqg"]
[ext_resource type="Texture2D" uid="uid://x5cwq4mdtujh" path="res://assets/character_down_walk_1.aseprite" id="2_gtw6n"]
[ext_resource type="Texture2D" uid="uid://bk5kdw8jthu1v" path="res://assets/character_side.aseprite" id="2_hqdl1"]
[ext_resource type="Script" path="res://scenes/game_camera.gd" id="2_sfdv1"]
[ext_resource type="Texture2D" uid="uid://owwusya41mrg" path="res://assets/character_down_walk_2.aseprite" id="3_h60v0"]
[ext_resource type="Texture2D" uid="uid://cxdim7ixblj75" path="res://assets/character_up.aseprite" id="3_w1kye"]
[ext_resource type="Script" path="res://scenes/player/player_idle.gd" id="7_jlw13"]
[ext_resource type="Script" path="res://scripts/state_machine.gd" id="7_wnlv0"]
[ext_resource type="Script" path="res://scenes/player/player_walk.gd" id="8_8h2o3"]
[ext_resource type="Texture2D" uid="uid://by8a1uhtg1v3j" path="res://assets/character_side_walk.aseprite" id="8_227eg"]
[ext_resource type="Texture2D" uid="uid://bawny6b3mi5vg" path="res://assets/shadown.aseprite" id="8_hxo7p"]
[ext_resource type="Texture2D" uid="uid://p1wyogo0ul1s" path="res://assets/character_up_walk.aseprite" id="9_5c8gt"]
[ext_resource type="Texture2D" uid="uid://baqohkej3328s" path="res://assets/attack.aseprite" id="9_pinus"]
[ext_resource type="Texture2D" uid="uid://d1xuqilc4l25x" path="res://assets/character_side_walk2.aseprite" id="10_2467x"]
[ext_resource type="Script" path="res://scenes/player/player_attack.gd" id="12_r542h"]

[sub_resource type="SpriteFrames" id="SpriteFrames_5xhx1"]
animations = [{
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gtw6n")
}],
"loop": true,
"name": &"attack_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("8_227eg")
}],
"loop": true,
"name": &"attack_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_5c8gt")
}],
"loop": true,
"name": &"attack_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("1_ylyqg")
}],
"loop": true,
"name": &"idle_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hqdl1")
}],
"loop": true,
"name": &"idle_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("3_w1kye")
}],
"loop": true,
"name": &"idle_up",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_gtw6n")
}, {
"duration": 1.0,
"texture": ExtResource("3_h60v0")
}],
"loop": true,
"name": &"walk_down",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("2_hqdl1")
}, {
"duration": 1.0,
"texture": ExtResource("8_227eg")
}],
"loop": true,
"name": &"walk_side",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": ExtResource("9_5c8gt")
}, {
"duration": 1.0,
"texture": ExtResource("10_2467x")
}],
"loop": true,
"name": &"walk_up",
"speed": 5.0
}]

[sub_resource type="Animation" id="Animation_wxmnl"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [0]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 6)]
}

[sub_resource type="Animation" id="Animation_hdjlx"]
resource_name = "attack_down"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [0, 3]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [false]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(2, 6)]
}

[sub_resource type="Animation" id="Animation_jx130"]
resource_name = "attack_side"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [8, 11]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-6, 4)]
}

[sub_resource type="Animation" id="Animation_joe8a"]
resource_name = "attack_up"
length = 0.3
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:frame")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [4, 7]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath(".:visible")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.3),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [true, false]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath(".:show_behind_parent")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [true]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath(".:position")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(1, -7)]
}

[sub_resource type="Animation" id="Animation_d3wcm"]
resource_name = "no_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:visible")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_11nik"]
_data = {
"RESET": SubResource("Animation_wxmnl"),
"attack_down": SubResource("Animation_hdjlx"),
"attack_side": SubResource("Animation_jx130"),
"attack_up": SubResource("Animation_joe8a"),
"no_attack": SubResource("Animation_d3wcm")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_b4dnd"]
radius = 5.0

[sub_resource type="CircleShape2D" id="CircleShape2D_p44ak"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_phmld"]
radius = 7.0

[node name="Player" type="CharacterBody2D" groups=["Player"]]
collision_layer = 2
collision_mask = 264
script = ExtResource("1_1r1j1")

[node name="Camera2D" type="Camera2D" parent="."]
script = ExtResource("2_sfdv1")
background_color = Color(0.0361009, 0.0361009, 0.0361009, 1)

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
z_index = 100
position = Vector2(0, -8)
sprite_frames = SubResource("SpriteFrames_5xhx1")
animation = &"idle_down"
autoplay = "idle_down"

[node name="Shadow" type="Sprite2D" parent="AnimatedSprite2D"]
show_behind_parent = true
position = Vector2(0, 8)
texture = ExtResource("8_hxo7p")

[node name="AttackEffectSprite" type="Sprite2D" parent="AnimatedSprite2D"]
modulate = Color(1, 1, 1, 0.768627)
position = Vector2(2, 6)
texture = ExtResource("9_pinus")
hframes = 12

[node name="AttackAnimationPlayer" type="AnimationPlayer" parent="AnimatedSprite2D/AttackEffectSprite"]
libraries = {
"": SubResource("AnimationLibrary_11nik")
}
autoplay = "no_attack"

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2(0, -3)
shape = SubResource("CircleShape2D_b4dnd")

[node name="HazardArea" type="Area2D" parent="."]
collision_layer = 0
collision_mask = 20

[node name="CollisionShape2D" type="CollisionShape2D" parent="HazardArea"]
position = Vector2(0, -4)
shape = SubResource("CircleShape2D_p44ak")

[node name="LevelArea" type="Area2D" parent="."]
collision_layer = 1536
collision_mask = 1536

[node name="CollisionShape2D" type="CollisionShape2D" parent="LevelArea"]
position = Vector2(0, -6)
shape = SubResource("CircleShape2D_phmld")
debug_color = Color(0.720103, 0.309434, 0.912944, 0.42)

[node name="StateMachine" type="Node" parent="." node_paths=PackedStringArray("initial_state")]
script = ExtResource("7_wnlv0")
initial_state = NodePath("Idle")

[node name="Idle" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("7_jlw13")
player = NodePath("../..")

[node name="Walk" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("8_8h2o3")
player = NodePath("../..")

[node name="Attack" type="Node" parent="StateMachine" node_paths=PackedStringArray("player")]
script = ExtResource("12_r542h")
player = NodePath("../..")

[connection signal="animation_finished" from="AnimatedSprite2D/AttackEffectSprite/AttackAnimationPlayer" to="StateMachine/Attack" method="_on_attack_animation_player_animation_finished"]
[connection signal="area_entered" from="HazardArea" to="." method="_on_hazard_area_area_entered"]
